Add responsive design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<div class="container-fluid m-0 p-0 superior">
-    <app-navbar></app-navbar>
-</div>
+<app-navbar></app-navbar>
 
-<div class="main">
+<div class="container">
     <router-outlet></router-outlet>
 </div>
 
