--- a/src/app/template/components/footer/footer.component.html
+++ b/src/app/template/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="container">
+    <footer class="d-flex justify-content-center align-items-center mt-4">
+      <p class="mb-0 text-muted">© 2022 Newsan, realizado por Fernando Vega y Eric Almendras.</p>
+    </footer>
+  </div>
