--- a/src/app/pages/home/components/home/home.component.html
+++ b/src/app/pages/home/components/home/home.component.html
@@ -1,58 +1,60 @@
-<!-- <app-navbar></app-navbar> -->
-<div class="container container-main">
-    <div class="row">
-        <div class="col-md">
+<div class="container header">
+    <div class="row row-cols-1">
+        <div class="col text-center mb-3">
+            <p class="text-primary"> Tu compra segura </p>
+            <h4>APP Precios Justos</h4>
+            <hr>   
+            <h4 class="mb-4">Seleccioná tu provincia para comenzar</h4>
+            {{provincia}}
+        </div>
+
+        <div class="col mb-4">
             <div class="container">
-                <div class="row justify-content-start">
-                    <p class="d-inline-block text-primary">
-                        Tu compra segura
-                    </p>
-                </div>
-                <div class="row">
-                    <h5 class="display-4 mb-4">APP Precios Justos</h5>
-                    <hr>    
-                    <div class="col w-100">
-                        <h3>Seleccioná tu provincia para comenzar</h3>
-                        {{provincia}}
-                    </div>
+                <div class="row justify-content-center align-items-center">
                     <div class="col">
-                        <img src="./../../../../../assets/images/Flag_map_of_Argentina.svg" class="d-block w-100" alt="mapa de argentina" height="240">
+                        <img src="./assets/images/mapa_argentina.svg" class="d-block w-100" alt="mapa de argentina" height="240">
                     </div>
-                    <button  class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#info">Mas Información</button>
+                    <div class="col d-none d-sm-block">
+                        <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="./assets/images/imagen1.jpg" class="d-block w-100" alt="imagen1">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/images/imagen2.jpg" class="d-block w-100" alt="imagen2">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/images/imagen3.jpg" class="d-block w-100" alt="imagen3">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-md">
-            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./../../../../../assets/images/imagen1.jpg.jpg" class="d-block w-100" alt="imagen1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./../../../../../assets/images/imagen2.jpg.jpg" class="d-block w-100" alt="imagen2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./../../../../../assets/images/imagen3.jpg.jpg" class="d-block w-100" alt="imagen3">
-                    </div>
-                </div>
+
+        <div class="col text-center">
+            <div class="container-fluid">
+                <button  class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#info">Mas Información</button>
             </div>
         </div>
     </div>
 </div>
 
+
 <div class="modal fade" id="info" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="infoLabel">Precios Justos</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="infoLabel">Precios Justos</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <app-info></app-info>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
         </div>
-        <div class="modal-body">
-          <app-info></app-info>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
