--- a/src/app/pages/precios/components/listado-precios/listado-precios.component.html
+++ b/src/app/pages/precios/components/listado-precios/listado-precios.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="provincia">
-    <div class="container">
+    <div class="container p-3">
       <div class="row">
         <div class="col">
           <h1 class="text-center">Precios para {{provincia}}</h1>
