--- a/src/app/pages/provincias/components/entrada/entrada.component.html
+++ b/src/app/pages/provincias/components/entrada/entrada.component.html
@@ -1,30 +1,27 @@
 <div *ngIf="provincia">
-<div class="container container-main">
-    <div class="row">
-        <div class="col-md">
-            <div class="container">
-                <div class="row justify-content-start">
-                    <p class="d-inline-block text-primary">
-                        Tu compra segura
-                    </p>
+    <div class="container">
+        <div class="row row-cols-1">
+            <div class="col text-center mb-3">
+                <p class="text-primary"> Tu compra segura </p>
+                <h4>APP Precios Justos</h4>
+                <hr>   
+                <h4 class="mb-2">{{provincia}}</h4>
+                
+            </div>
+    
+            <div class="col mb-4">
+                <div class="container d-flex align-items-center justify-content-center">
+                    <img src="./assets/images/{{provincia_format}}.svg" class="d-block" alt="mapa_provincia" height="360">   
                 </div>
-                <div class="row">
-                    <h5 class="display-4 mb-4">APP Precios Justos</h5>
-                    <hr>    
-                    <div class="col w-100">
-                        <h2>{{provincia}}</h2>
-                    </div>
-                    <div class="col">
-                        <img src="./../../../../../assets/images/Flag_map_of_Argentina.svg" class="d-block w-100" alt="mapa de argentina" height="240">
-                    </div>
-                    <button class="btn btn-primary" [routerLink]="['/precios/listado',provincia]">Ver Listado</button>
+            </div>
+
+            <div class="col text-center">
+                <div class="container-fluid">
+                    <button class="btn btn-primary" [routerLink]="['/precios/listado',provincia]">Ver Listado de productos</button>
                 </div>
             </div>
         </div>
-        <div class="col-md">
-            <img src="./../../../../../assets/images/{{provincia_format}}.svg" class="d-block w-100" alt="mapa_provincia" height="500">
-        </div>
     </div>
-</div>
+  
 </div>
 
