--- a/src/app/template/components/navbar/navbar.component.html
+++ b/src/app/template/components/navbar/navbar.component.html
@@ -1,10 +1,8 @@
-<nav class="navbar navbar-expand-lg bg-primary">
-    <div class="container-fluid">
-        <div class="col-md-auto">
-            <a class="navbar-brand text-white" href="main">Precios Justos</a>
-        </div>
-        <div class="col-md-auto">
-            <app-listado></app-listado>
-        </div>
+<nav class="navbar navbar-expand-md fixed-top bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand text-white" routerLink="/home">Precios Justos</a>
+    <div class="d-flex align-items-end">
+        <app-listado></app-listado>
     </div>
+  </div>
 </nav>
