--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+
+*{ box-sizing: border-box; }
+
+body { padding-top: 60px; }
+
+p { font-size: 1.3rem; }
+h1 { font-size:  2.6rem; }
+h2 { font-size: 2.4rem; }
+h3 { font-size: 2.2rem; }
+h4 { font-size: 2rem; }
+h5 { font-size: 1.8rem; }
+h6 { font-size: 1.6rem; }
