Add productsList page

--- a/src/app/pages/home/components/home/home.component.html
+++ b/src/app/pages/home/components/home/home.component.html
@@ -4,8 +4,7 @@
             <p class="text-primary"> Tu compra segura </p>
             <h4>APP Precios Justos</h4>
             <hr>   
-            <h4 class="mb-4">Seleccioná tu provincia para comenzar</h4>
-            {{provincia}}
+            <h4 class="mb-4">Seleccioná tu provincia para comenzar ↗</h4>
         </div>
 
         <div class="col mb-4">
