--- a/src/app/template/components/navbar/navbar.component.html
+++ b/src/app/template/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand text-white" routerLink="/home">Precios Justos</a>
     <div class="d-flex align-items-end">
-        <app-listado></app-listado>
+        <app-provincias-select></app-provincias-select>
     </div>
   </div>
 </nav>
