--- a/src/app/pages/precios/components/listado-precios/listado-precios.component.html
+++ b/src/app/pages/precios/components/listado-precios/listado-precios.component.html
@@ -1,28 +1,68 @@
-<div *ngIf="provincia">
-    <div class="container p-3">
-      <div class="row">
-        <div class="col">
-          <h1 class="text-center">Precios para {{provincia}}</h1>
+<div class="container">
+    <div class="text-center mb-5">
+        <h1>Productos de {{ provinciaSeleccionada.getValue().nombre }}</h1>
+    </div>
+    <div class="row justify-content-center align-items-center">
+        <div class="col-sm-4">
+            <div class="form-group">
+                <input
+                    [(ngModel)]="filtroTexto"
+                    (ngModelChange)="onFiltroTextoChange($event)"
+                    type="text"
+                    class="form-control"
+                    id="filtroTexto"
+                    placeholder="Buscá por nombre o por código"
+                >
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <table class="table table-hover" id="table">
-            <thead>
-              <tr>
-              <th scope="col"></th>
-              <th scope="col">Producto</th>
-              <th scope="col">Código</th>
-              <th scope="col">Precio</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let precio of preciosArray; let i=index">
-              <th scope="row">{{i+1}}</th>
-              <td>{{precio.descripcion}}</td>
-              <td>{{precio.ean}}</td>
-              <td>{{precio.precio}}</td>
-          </tbody>
-        </table>
-      </div>   
+        <div class="col-sm-4">
+            <input
+                [(ngModel)]="filtroPrecio"
+                (ngModelChange)="onFiltroPrecioChange($event)"
+                [max]="precioMaximo"
+                type="range"
+                class="form-range"
+                id="filtroPrecio"
+            >
+            <label for="filtroPrecio" class="form-label">Precio máximo - seleccionado: ${{filtroPrecio}}</label>
+        </div>
+        <div class="col-sm-4">
+            <label class="form-label"><strong>Ordernar:</strong></label>
+            <form [formGroup]="form" (change)="sort()">
+                <input type="radio" [value]="true" formControlName="orden">
+                <label class="form-check-label m-2" for="ascendente">
+                    Ascendentemente
+                </label>
+              
+                <input type="radio" [value]="false" formControlName="orden">
+                <label class="form-check-label m-2" for="descendente">
+                    Descendentemente
+                </label>        
+            </form>
+        </div>
     </div>
 </div>
+<div class="container">
+    <div class="row justify-content-center" *ngIf="productosFiltrados.length > 0; else noHayProductosBlock">
+        <div class="card col-sm-3 mx-1 g-3" *ngFor="let producto of productosFiltrados | paginate: {itemsPerPage:35,currentPage:p};">
+            <div class="card-body">
+                <h5 class="card-title">{{producto.nombre}}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{producto.ean}}</h6>
+                <p class="card-text">{{producto.precio}}</p>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center mt-3 pt-2 contenedor rounded">
+            <pagination-controls class="paginate pt-2" previousLabel="Atrás" nextLabel="Siguiente" (pageChange) = "p = $event"></pagination-controls>
+        </div>
+        
+    </div>
+</div>
+    
+
+    <ng-template #noHayProductosBlock>
+        <div class="alert alert-warning" role="alert">
+            No hay productos para mostrar
+        </div>
+    </ng-template>
+
+
