--- a/src/app/pages/provincias/components/entrada/entrada.component.html
+++ b/src/app/pages/provincias/components/entrada/entrada.component.html
@@ -11,7 +11,7 @@
     
             <div class="col mb-4">
                 <div class="container d-flex align-items-center justify-content-center">
-                    <img src="./assets/images/{{provincia_format}}.svg" class="d-block" alt="mapa_provincia" height="360">   
+                    <img src="./assets/images/{{provincia_format}}.svg" class="d-block" alt="mapa_provincia" height="360" width="300">   
                 </div>
             </div>
 
