--- a/src/app/pages/home/components/home/home.component.html
+++ b/src/app/pages/home/components/home/home.component.html
@@ -13,7 +13,7 @@
                     <div class="col">
                         <img src="./assets/images/mapa_argentina.svg" class="d-block w-100" alt="mapa de argentina" height="240">
                     </div>
-                    <div class="col d-none d-sm-block">
+                    <div class="col d-none d-md-block">
                         <div class="carousel slide carousel-fade" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
