--- a/src/app/pages/precios/components/listado-precios/listado-precios.component.html
+++ b/src/app/pages/precios/components/listado-precios/listado-precios.component.html
@@ -1,68 +1,73 @@
-<div class="container">
+<div class="container mb-3">
     <div class="text-center mb-5">
         <h1>Productos de {{ provinciaSeleccionada.getValue().nombre }}</h1>
     </div>
-    <div class="row justify-content-center align-items-center">
-        <div class="col-sm-4">
+    <div class="row justify-content-center">
+        <div class="col-12 col-lg-4 d-flex flex-column justify-content-center mb-3">
             <div class="form-group">
                 <input
                     [(ngModel)]="filtroTexto"
                     (ngModelChange)="onFiltroTextoChange($event)"
                     type="text"
-                    class="form-control"
+                    class="form-control filtroInput rounded"
                     id="filtroTexto"
                     placeholder="Buscá por nombre o por código"
                 >
             </div>
         </div>
-        <div class="col-sm-4">
-            <input
+        <div class="col-12 col-lg-5">
+            <div class="d-flex flex-column justify-content-around align-items-center orderBox rounded p-2">
+                <label class="form-label"><strong>Orden:</strong></label>
+                <form [formGroup]="form" (change)="sort()">
+                    <input type="radio" [value]="true" formControlName="orden">
+                    <label class="form-check-label m-2" for="ascendente">
+                        Ascendente
+                    </label>
+                    <div>
+                        <input type="radio" [value]="false" formControlName="orden">
+                        <label class="form-check-label m-2" for="descendente">
+                            Descendiente
+                        </label>   
+                    </div>     
+                </form>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <div class="container d-flex justify-content-center align-items-center mt-3">
+                <input
                 [(ngModel)]="filtroPrecio"
                 (ngModelChange)="onFiltroPrecioChange($event)"
                 [max]="precioMaximo"
                 type="range"
-                class="form-range"
+                class="form-range w-50"
                 id="filtroPrecio"
-            >
-            <label for="filtroPrecio" class="form-label">Precio máximo - seleccionado: ${{filtroPrecio}}</label>
-        </div>
-        <div class="col-sm-4">
-            <label class="form-label"><strong>Ordernar:</strong></label>
-            <form [formGroup]="form" (change)="sort()">
-                <input type="radio" [value]="true" formControlName="orden">
-                <label class="form-check-label m-2" for="ascendente">
-                    Ascendentemente
-                </label>
-              
-                <input type="radio" [value]="false" formControlName="orden">
-                <label class="form-check-label m-2" for="descendente">
-                    Descendentemente
-                </label>        
-            </form>
+                >
+                <span class="badge rounded-pill bg-primary">Hasta ${{filtroPrecio}}</span>
+            </div>
         </div>
     </div>
 </div>
 <div class="container">
-    <div class="row justify-content-center" *ngIf="productosFiltrados.length > 0; else noHayProductosBlock">
-        <div class="card col-sm-3 mx-1 g-3" *ngFor="let producto of productosFiltrados | paginate: {itemsPerPage:35,currentPage:p};">
-            <div class="card-body">
-                <h5 class="card-title">{{producto.nombre}}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">{{producto.ean}}</h6>
-                <p class="card-text">{{producto.precio}}</p>
+    <div class="row justify-content-center align-items-between" *ngIf="productosFiltrados.length > 0; else noHayProductosBlock">
+        <div class="card rounded col-1 col-sm-6 col-md-4" style="width: 14rem; height: 16rem;" *ngFor="let producto of productosFiltrados | paginate: {itemsPerPage:35,currentPage:p};">
+            <div class="card-body text-center d-flex flex-column justify-content-around cyan">
+                <h5 class="card-title mb-0 text-wrap">{{producto.nombre}}</h5>
+                <h6 class="card-subtitle mb-4 text-muted">{{producto.ean}}</h6>
+                <p class="card-text rounded">$ {{producto.precio}}</p>
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center mt-3 pt-2 contenedor rounded">
-            <pagination-controls class="paginate pt-2" previousLabel="Atrás" nextLabel="Siguiente" (pageChange) = "p = $event"></pagination-controls>
+            <pagination-controls class="paginate pt-2" [autoHide]="true" [responsive]="true" previousLabel="Atrás" nextLabel="Siguiente" (pageChange) = "p = $event"></pagination-controls>
         </div>
         
     </div>
 </div>
     
 
-    <ng-template #noHayProductosBlock>
-        <div class="alert alert-warning" role="alert">
-            No hay productos para mostrar
-        </div>
-    </ng-template>
+<ng-template #noHayProductosBlock>
+    <div class="alert alert-warning" role="alert">
+        No hay productos para mostrar
+    </div>
+</ng-template>
 
 
