--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,8 @@
 
 body { padding-top: 60px; }
 
+html{ min-width: 357px; }
+
 p { font-size: 1.3rem; }
 h1 { font-size:  2.6rem; }
 h2 { font-size: 2.4rem; }
