--- a/src/app/template/components/footer/footer.component.html
+++ b/src/app/template/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <footer class="d-flex justify-content-center align-items-center mt-4">
       <p class="mb-0 text-muted">© 2022 Newsan, realizado por Fernando Vega y Eric Almendras.</p>
     </footer>
