--- a/src/app/pages/precios/components/listado-precios/listado-precios.component.css
+++ b/src/app/pages/precios/components/listado-precios/listado-precios.component.css
@@ -14,6 +14,7 @@
 	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
 	transition: all 400ms ease-out;
 	cursor: default;
+    cursor: pointer;
 }
 
 .card:hover{
